// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaflet maps renders a map with HERE maps as provider 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with MapBox maps as provider 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="Map data &copy; <a href='https://www.openstreetmap.org/'>OpenStreetMap</a> contributors, <a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA</a>, Imagery © <a href='https://www.mapbox.com/'>Mapbox</a>"
        id="mapbox.streets"
        url="https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token="
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with attribution 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={true}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with current location 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
      <LeafletMarker
        key="marker_0"
        marker={
          Object {
            "latitude": 51.906688,
            "longitude": 4.48837,
            "url": "image:url",
          }
        }
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with markers 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
      <LeafletMarker
        key="marker_0"
        marker={
          Object {
            "latitude": 51.906688,
            "longitude": 4.48837,
            "title": "Mendix HQ",
            "url": "image:url",
          }
        }
      />
      <LeafletMarker
        key="marker_1"
        marker={
          Object {
            "latitude": 51.922823,
            "longitude": 4.479632,
            "title": "Gementee Rotterdam",
            "url": "image:url",
          }
        }
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "auto",
      "paddingBottom": "37.5%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with pixels renders structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with right structure 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "37.5px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;
